<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/qrpayment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white"
    tools:context=".Payment">


    <RadioButton
        android:id="@+id/card_Payment"
        android:layout_width="292dp"
        android:layout_height="46dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/card_payment"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPurchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.807" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/purchase_details1"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bookCard"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:strokeColor="@android:color/black"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imgCover"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/imgDesc"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/loard1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="12dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/tvBookTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book2"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:id="@+id/stepper"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/stepper_bg"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingHorizontal="12dp"
    app:layout_constraintTop_toBottomOf="@id/bookCard"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btnMinus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/imgDesc"
            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck,TouchTargetSizeCheck"
            tools:srcCompat="@drawable/ic_remove_24" />

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/_1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

        <ImageButton
            android:id="@+id/btnPlus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/imgDesc"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck"
            tools:src="@drawable/ic_add_24" />
</LinearLayout>


<LinearLayout
android:id="@+id/priceRow"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_marginTop="16dp"
android:orientation="vertical"
app:layout_constraintTop_toBottomOf="@id/stepper"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_per_chapter"
        android:textColor="#666" />

    <TextView
    android:id="@+id/tvPrice"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/_0_00"
    android:textStyle="bold"
    android:textSize="18sp"
    android:textColor="@android:color/black" />

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginVertical="12dp"
    android:background="#EEEEEE"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/amount_due"
    android:textColor="#666" />

<TextView
    android:id="@+id/tvAmount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/_0_00"
    android:textStyle="bold"
    android:textSize="22sp"
    android:textColor="@android:color/black"/>
</LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPurchase"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="308dp"
        android:text="@string/purchase"
        android:textColor="@android:color/black"
        app:backgroundTint="@color/book2btns"
        app:cornerRadius="28dp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceRow"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tvSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_number_of_chapters"
        android:textColor="#666"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookCard"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="364dp"
        android:layout_height="50dp"
        android:autofillHints="Email"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/btnPurchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceRow"
        app:layout_constraintVertical_bias="0.162" />

    <RadioButton
        android:id="@+id/qrScan"
        android:layout_width="292dp"
        android:layout_height="46dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/scan_qr"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPurchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.537" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="248dp"
        android:layout_height="31dp"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/select_payment_method"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/qrScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
