<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/qrpayment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QrPayment">

    <TextView
        android:id="@+id/topBar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_arrow_back_24"
        android:fontFamily="@font/inter_semibold"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="@string/back"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:title="@string/details"
        app:titleCentered="false"
        app:titleTextColor="@color/black" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bookCard"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:strokeColor="@android:color/black"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/imgCover"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/imgDesc"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/loard1" />

            <TextView
                android:id="@+id/tvBookTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book2"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/scan"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="382dp"
        android:layout_height="25dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/b2details"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bookCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />

    <androidx.cardview.widget.CardView
        android:id="@+id/qrCard"
        android:layout_width="298dp"
        android:layout_height="326dp"
        android:layout_marginTop="188dp"
        app:cardCornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookCard" >

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/front"
            android:contentDescription="@string/imgDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/qr" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>